order/order-spec/src/main/java/com/junbo/order/spec/error/EmailErrorCode.java
/*
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 *
 * Copyright (C) 2014 Junbo and/or its affiliates. All rights reserved.
 */
package com.junbo.order.spec.error;

/**
 * Created by chriszhu on 3/20/14.
 */
public class EmailErrorCode {

    private EmailErrorCode() {}

    // email error starts from 34000
    public static final String EMAIL_CONNECTION_ERROR = "24000";
}
